<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/app_name">

        <SwitchPreferenceCompat
            app:key="biometrics"
            app:title="Use Biometrics" />

        <ListPreference
            app:key="theme"
            app:title="Theme"
            android:dialogTitle="@string/theme_dialog"
            android:defaultValue="@string/theme_default"
            android:entries="@array/theme"
            android:entryValues="@array/theme_values" />

        <ListPreference
            app:key="currency"
            app:title="Default Currency"
            android:dialogTitle="Change default Currency"
            android:defaultValue="€"
            android:entries="@array/currency"
            android:entryValues="@array/currency" />

    </PreferenceCategory>
</PreferenceScreen>
